--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,17 @@ sourceSets {
             srcDirs = ['src/main/java']
         }
     }
+
     test {
         java {
             srcDirs = ['src/test/java']
         }
     }
+}
+
+test {
+    useJUnitPlatform()
+    testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 dependencies {
