Add separate test action
Signed-off-by: Dubkoslove <dominik.dubovskyy@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ sourceSets {
 }
 
 test {
+    testLogging {
+        events 'started', 'passed'
+    }
     useJUnitPlatform()
     testClassesDirs = sourceSets.test.output.classesDirs
 }
