--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Build
 
 on:
   push:
@@ -29,3 +29,5 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build --exclude-task test
+      - name: Run Tests
+        run: ./gradlew test --console=plain --tests "*"
