--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -27,7 +27,5 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Gradle
+      - name: Run build
         run: ./gradlew build --exclude-task test
-      - name: Run Tests
-        run: ./gradlew test --console=plain --tests "*"
