--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,9 +4,19 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+      - name: Run build
+        run: ./gradlew build --exclude-task test
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -14,5 +24,5 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Run build
-        run: ./gradlew build --exclude-task test
+      - name: Run tests
+        run: ./gradlew test
