--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,4 +26,4 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew test --console=plain --tests "*"
