--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,3 +27,8 @@ jobs:
           distribution: 'temurin'
       - name: Run tests
         run: ./gradlew test --console=plain --tests "*"
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: success() || failure() # always run even if the previous step fails
+        with:
+        report_paths: '**/build/test-results/test/TEST-*.xml'
