--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,4 +31,4 @@ jobs:
         uses: mikepenz/action-junit-report@v3
         if: success() || failure() # always run even if the previous step fails
         with:
-        report_paths: '**/build/test-results/test/TEST-*.xml'
+        report_paths: '**/junit-reports/TEST-*.xml'
