--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,9 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v1
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -19,11 +19,34 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
       - name: Run tests
         run: ./gradlew test --console=plain --tests "*"
+      - uses: actions/upload-artifact@v2  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:
+          name: test-results
+          path: jest-junit.xml
+
+
+  name: 'Test Report'
+  on:
+    workflow_run:
+      workflows: [ 'test' ]                     # runs after CI workflow
+      types:
+        - completed
+  jobs:
+    report:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: dorny/test-reporter@v1
+          with:
+            artifact: test-results
+            name: JEST Tests
+            path: '*.xml'
+            reporter: jest-junit
