--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,26 +27,19 @@ jobs:
           distribution: 'temurin'
       - name: Run tests
         run: ./gradlew test --console=plain --tests "*"
-      - uses: actions/upload-artifact@v2  # upload test results
-        if: success() || failure()        # run this step even if previous step failed
+      - uses: actions/upload-artifact@v2
+        if: success() || failure()
         with:
           name: test-results
           path: jest-junit.xml
 
-
-  name: 'Test Report'
-  on:
-    workflow_run:
-      workflows: [ 'test' ]                     # runs after CI workflow
-      types:
-        - completed
-  jobs:
-    report:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: dorny/test-reporter@v1
-          with:
-            artifact: test-results
-            name: JEST Tests
-            path: '*.xml'
-            reporter: jest-junit
+  report:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: dorny/test-reporter@v1
+        with:
+          artifact: test-results
+          name: JEST Tests
+          path: '*.xml'
+          reporter: jest-junit
