--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,19 +27,19 @@ jobs:
           distribution: 'temurin'
       - name: Run tests
         run: ./gradlew test --console=plain --tests "*"
-      - uses: actions/upload-artifact@v2
-        if: success() || failure()
-        with:
-          name: test-results
-          path: jest-junit.xml
-
-  report:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: dorny/test-reporter@v1
-        with:
-          artifact: test-results
-          name: JEST Tests
-          path: '*.xml'
-          reporter: jest-junit
+#      - uses: actions/upload-artifact@v2
+#        if: success() || failure()
+#        with:
+#          name: test-results
+#          path: jest-junit.xml
+#
+#  report:
+#    runs-on: ubuntu-latest
+#    needs: test
+#    steps:
+#      - uses: dorny/test-reporter@v1
+#        with:
+#          artifact: test-results
+#          name: JEST Tests
+#          path: '*.xml'
+#          reporter: jest-junit
