--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
 }
 
 group 'pv286.panbyte'
 version '1.0'
+
+dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    checkstyle 'com.puppycrawl.tools:checkstyle:10.9.3'
+}
 
 jar {
     archiveFileName = 'panbyte.jar'
@@ -38,8 +44,4 @@ test {
     }
     useJUnitPlatform()
     testClassesDirs = sourceSets.test.output.classesDirs
-}
-
-dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
