--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,6 +3,18 @@ name: Build
 on: [push]
 
 jobs:
+  checkstyle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Run checkstyle
+        run: ./gradlew checkstyleMain
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -27,19 +39,3 @@ jobs:
           distribution: 'temurin'
       - name: Run tests
         run: ./gradlew test --console=plain --tests "*"
-#      - uses: actions/upload-artifact@v2
-#        if: success() || failure()
-#        with:
-#          name: test-results
-#          path: jest-junit.xml
-#
-#  report:
-#    runs-on: ubuntu-latest
-#    needs: test
-#    steps:
-#      - uses: dorny/test-reporter@v1
-#        with:
-#          artifact: test-results
-#          name: JEST Tests
-#          path: '*.xml'
-#          reporter: jest-junit
