--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,7 +13,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Run checkstyle
-        run: ./gradlew checkstyleMain --console=PLAIN --quiet | tee checkstyle.log
+        run: ./gradlew checkstyleMain
           if [[ $(cat checkstyle.log | wc -l) -gt 0 ]]; then
           echo "Checkstyle warnings found"
           exit 1
