--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,22 +3,6 @@ name: Build
 on: [push]
 
 jobs:
-  checkstyle:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Run checkstyle
-        run: ./gradlew checkstyleMain
-          if [[ $(cat checkstyle.log | wc -l) -gt 0 ]]; then
-          echo "Checkstyle warnings found"
-          exit 1
-          fi
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -30,6 +14,23 @@ jobs:
           distribution: 'temurin'
       - name: Run build
         run: ./gradlew build --exclude-task test --exclude-task checkstyleMain --exclude-task checkstyleTest
+
+  checkstyle:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Run checkstyle
+        run: ./gradlew checkstyleMain | tee checkstyle.log
+          if [[ $(cat checkstyle.log | wc -l) -gt 0 ]]; then
+          echo "Checkstyle warnings found"
+          exit 1
+          fi
 
   test:
     runs-on: ubuntu-latest
