--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,11 +26,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Run checkstyle
-        run: ./gradlew checkstyleMain | tee checkstyle.log
-          if [[ $(cat checkstyle.log | wc -l) -gt 0 ]]; then
-          echo "Checkstyle warnings found"
-          exit 1
-          fi
+        run: ./gradlew checkstyleMain -Werror
 
   test:
     runs-on: ubuntu-latest
