--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version '1.0'
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'com.code-intelligence:jazzer-junit:0.15.0'
     checkstyle 'com.puppycrawl.tools:checkstyle:10.9.3'
 }
 
