--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ jar {
     archiveFileName = 'panbyte.jar'
     destinationDirectory = file('appBuilds')
     manifest {
-        attributes "Main-Class": "Program"
+        attributes "Main-Class": "PanByte"
     }
 }
 
