feat(): Added options for test pipeline
Signed-off-by: Michal Badin <badin.miso@gmail.com>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,4 +39,4 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Run tests
-        run: ./gradlew test --console=plain --tests "*" --stacktrace
+        run: ./gradlew test --console=plain --tests "*" --stacktrace --scan --debug
