Show only failed tests
Signed-off-by: Dubkoslove <dominik.dubovskyy@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sourceSets {
 
 test {
     testLogging {
-        events 'passed', 'failed', 'skipped'
+        events 'failed', 'skipped'
     }
     useJUnitPlatform()
     testClassesDirs = sourceSets.test.output.classesDirs
